# subline

./: .gitignore  LICENSE  README.md  app.py  examples.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/: calc_metrics.py  dom.py  kde_plot.py  series.py  sparkline.py  sparky.py  test_decompose.py  token_bb.py  visualize.py
src/sparky/: __init__.py  kde_plot.py  series.py  sparkline.py  sparky.py  theming.py  token_bb.py
src/sparky/inference/: __init__.py  calc_metrics.py  model.py  visualize.py
src/sparky/utils/: decompose.py  dom.py
src/subline/: __init__.py  series.py  sparkline.py  subline.py  theming.py  token_bb.py
src/subline/inference/: __init__.py  calc_metrics.py  model.py  types.py  visualize.py
src/subline/utils/: decompose.py  dom.py
tests/: test_decompose.py
